--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   },
   "homepage": "https://github.com/gh4ck3r/global-ext-parsers#readme",
   "dependencies": {
-    "esprima": "^3.1.3"
+    "esprima": "^3.1.3",
+    "htmlparser2": "^3.9.2"
   }
 }
